backend/inventory-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - port: 80
      targetPort: 8005
      protocol: TCP
  type: ClusterIP
